-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9
-
Component/s: hotspot
-
b120
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8182642 | 8-pool | Tobias Hartmann | P4 | Closed | Won't Fix |
Few tests fail when -XX:TieredStopAtLevel=1 is used. They doesn't expect to be execute in such mode.
RULE "compiler/arraycopy/TestArrayCopyNoInitDeopt.java" Exception java.lang.RuntimeException: m2 not deoptimized
RULE "compiler/rangechecks/TestExplicitRangeChecks.java" Exception java.lang.RuntimeException: some tests failed
RULE "compiler/tiered/TieredLevelsTest.java" Crash SIGSEGV
RULE "compiler/arraycopy/TestArrayCopyNoInitDeopt.java" Exception java.lang.RuntimeException: m2 not deoptimized
RULE "compiler/rangechecks/TestExplicitRangeChecks.java" Exception java.lang.RuntimeException: some tests failed
RULE "compiler/tiered/TieredLevelsTest.java" Crash SIGSEGV
- backported by
-
JDK-8182642 Several compiler tests fail when are executed with C1 only
-
- Closed
-
- duplicates
-
JDK-8155116 compiler/tiered/TieredLevelsTest.java crashed on 32bit platforms
-
- Closed
-
- relates to
-
JDK-8160898 assert while replaying ciReplay file created using TieredStopAtLevel=1
-
- Resolved
-
-
JDK-8158756 [Testbug] serviceability/dcmd/compiler/CompilerQueueTest.java fails with TieredStopAtLevel=1
-
- Resolved
-