8154073: Several compiler tests fail when are executed with C1 only

Added missing flag checks to the tests and Whitebox API.

Reviewed-by: kvn